--- a/app/src/main/res/drawable/record_progress_bar.xml
+++ b/app/src/main/res/drawable/record_progress_bar.xml
@@ -5,7 +5,8 @@
         android:color="@color/colorPrimaryDark">
 
     </stroke>
-    <size android:width="80dp"
+    <size
+        android:width="80dp"
         android:height="80dp">
 
     </size>
