--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7974B5</color>
+    <color name="colorPrimary">#7974b5</color>
     <color name="colorPrimaryDark">#464368</color>
     <color name="colorAccent">#8A85CE</color>
     <color name="primary_light">#7974B5</color>
